--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -1,11 +1,6 @@
-# Introduction
- 
-Welcome to Nextra! This is a basic docs template. You can use it as a starting point for your own project :)
+# Simpleuid - Random ID generation for Python
 
-## What is Nextra?
+A simple and intuitive package to generate random strings. 
 
-A **simple**, **powerful** and **flexible** site generation framework with everything you love from Next.js.
+Generating random id's is
 
-## Documentation
-
-The documentation is available at [https://nextra.site](https://nextra.site).
