--- a/pages/installation.mdx
+++ b/pages/installation.mdx
@@ -1,9 +1,12 @@
 # Installation
 
+### Requirements
+Before installing Strig, make sure you have Python installed (version 3.6 or higher).
+
 Install using `PIP`
 
 ``` bash
-pip install simpleuid
+pip install strig
 ```
 
 Note that `pip` refers to the Python 3 package manager. In an environment where Python 2 is also present the correct command may be `pip3`.
