Add numeric docs

--- a/pages/functions/alpha.mdx
+++ b/pages/functions/alpha.mdx
@@ -1,6 +1,6 @@
 # `alpha()` function
 
-The alpha() function is used to generate a random string composed entirely of alphabetic characters.
+The `alpha()` function is used to generate a random string composed entirely of alphabetic characters.
 
 ## Syntax
 ### Basic 
